--- a/_static/theme.scss
+++ b/_static/theme.scss
@@ -328,8 +328,8 @@ ul li {
     }
 }
 
-#continuamos, #demo {
-    h2 {
+#continuamos, #mas-seguridad {
+    h2, h3 {
         font-weight: bold;
         font-size: 3.6em;
         text-shadow: #000000 1px 0 10px;
