--- a/_static/theme.css
+++ b/_static/theme.css
@@ -527,7 +527,7 @@ ul li {
 #filtrado-y-paginacion h3 {
   font-size: 2em; }
 
-#continuamos h2, #demo h2 {
+#continuamos h2, #continuamos h3, #mas-seguridad h2, #mas-seguridad h3 {
   font-weight: bold;
   font-size: 3.6em;
   text-shadow: #000000 1px 0 10px; }
