--- a/_static/theme.scss
+++ b/_static/theme.scss
@@ -29,12 +29,20 @@
 // Include theme-specific fonts
 @import url(https://fonts.googleapis.com/css?family=Lato:300,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:700);
+@import url(https://fonts.googleapis.com/css?family=Creepster);
 
 @import url(https://fonts.googleapis.com/css2?family=Allura&display=swap);
 
 
+@font-face {
+  font-family: 'Flux Regular';
+  font-style: normal;
+  font-weight: 300;
+  src: url("Flux Regular.otf") format('opentype');
+}
+
 // store colors in variables
-$hotPink: #A30000;
+$hotPink: #2b5b84;
 $djangoColor: #0C4B33;
 $sunshine: $hotPink;
 // the color of the thick border surrounding the presention
@@ -127,6 +135,8 @@ body::before {
     left: 0;
     background-color: #f8f8f8;
     background: url(background.png) repeat-x;
+    //background: rgba(255,255,255,1);
+    //background: linear-gradient(180deg, rgb(255, 239, 179) 0%, rgba(255,255,255,1) 25%);
     will-change: transform;
     z-index: -1;
 }
@@ -142,6 +152,11 @@ body::before {
 // Theme template ------------------------------
 @import "./template.scss";
 // ---------------------------------------------
+
+.reveal *, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+  font-family: 'M PLUS 1p', sans-serif;
+}
+
 
 .reveal pre code span {
     font-family: monospace;
@@ -195,16 +210,43 @@ ul li {
 
 #intro {
     h1 {
-        font-size: 2em;
+        font-size: 2.5em;
     }
 
     strong {
-        display: none;
+      color: $linkColor;
+      font-family: "Flux Regular";
+      text-transform: none;
+      font-size: 1.5em;
     }
 }
 
+#id1 {
+ font-size: 2em;
+}
+
+#marzo-2020 {
+
+  h3 {
+    font-family: "Creepster";
+    font-size: 5em;
+    color: #a51d1d;
+  }
+}
+
+#python-malaga {
+  h3 {
+    color: #50066f;
+
+    strong {
+      color: #005033;
+    }
+
+  }
+}
+
 #sobre-mi {
-    h2 {
+    h3 {
         width: 40%;
         font-size: 2.5em;
         display: inline-block;
@@ -223,6 +265,7 @@ ul li {
         display: inline-block;
     }
 }
+
 
 #listado-cambios {
   ul li {
@@ -265,16 +308,6 @@ ul li {
     // margin-top: -100px;
     img {
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
-    }
-}
-
-#django, #django-rest-framework, #antorchas, #pastel-1, #pastel-2, #estructura, #pikachu, #operadores-http {
-    h1, h2, h3 {
-        display: none;
-    }
-
-    img {
-        background: none;
     }
 }
 
@@ -328,7 +361,7 @@ ul li {
     }
 }
 
-#continuamos, #mas-seguridad {
+#continuamos, #mas-seguridad, #python-te-necesita {
     h2, h3 {
         font-weight: bold;
         font-size: 3.6em;
@@ -336,10 +369,23 @@ ul li {
     }
 }
 
-#vamos-terminando {
-    margin-top: 180px;
+#python-te-necesita {
+  top: auto !important;
+  bottom: 0;
+
+   h3 {
+       font-weight: bold;
+       font-size: 3em;
+       color: #ffffff;
+       text-shadow: #ba4d53 3px 0 10px;
+   }
 }
 
+#que-otras-novedades-hay {
+  ul li p {
+    margin: 2px;
+  }
+}
 
 #y-no-podriamos-reducirlo, #ejemplo-web, #formulario {
     font-size: 0.6em;
