--- a/_static/theme.css
+++ b/_static/theme.css
@@ -24,6 +24,8 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 @import url(https://fonts.googleapis.com/css?family=Lato:300,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:700);
 @import url(https://fonts.googleapis.com/css?family=Creepster);
+@import url(https://fonts.googleapis.com/css?family=Satisfy);
+@import url(https://fonts.googleapis.com/css?family=Nanum+Brush+Script);
 @import url(https://fonts.googleapis.com/css2?family=Allura&display=swap);
 .hljs {
   display: block;
@@ -411,9 +413,15 @@ body {
 .reveal *, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   font-family: 'M PLUS 1p', sans-serif; }
 
+.reveal pre code {
+  max-height: 600px; }
+
 .reveal pre code span {
   font-family: monospace;
   text-transform: none; }
+
+.reveal h2 strong, .reveal h3 strong {
+  color: #2b5b84; }
 
 .reveal h1 {
   font-size: 3.5em; }
@@ -448,10 +456,10 @@ ul li {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
   padding: 15px; }
 
-#intro h1 {
+#intro h1, #intro h2, #id2 h1, #id2 h2 {
   font-size: 2.5em; }
 
-#intro strong {
+#intro strong, #id2 strong {
   color: #2b5b84;
   font-family: "Flux Regular";
   text-transform: none;
@@ -486,66 +494,35 @@ ul li {
   width: 40%;
   display: inline-block; }
 
+#python-2-5 h3 {
+  font-family: "Satisfy";
+  text-transform: none;
+  font-size: 4em; }
+  #python-2-5 h3 strong {
+    font-family: "Satisfy"; }
+
 #listado-cambios ul li {
   line-height: 1em; }
   #listado-cambios ul li p {
     margin: 5px;
     font-size: 25px; }
 
-#django-django-rest-framework {
-  height: 100%;
-  width: 100%;
-  background: url(./heart.svg) center no-repeat;
-  background-size: contain; }
-  #django-django-rest-framework h2 {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    font-size: 2.3em;
-    margin-top: -70px;
-    margin-left: 120px;
-    margin-right: 120px; }
-  #django-django-rest-framework strong {
-    color: #0C4B33; }
-  #django-django-rest-framework em {
-    color: #fff; }
+#pep-657-mejoras-en-las-indicaciones-de-error-en-los-tracebacks {
+  font-size: 0.8em; }
+  #pep-657-mejoras-en-las-indicaciones-de-error-en-los-tracebacks strong {
+    display: block; }
 
-#ejemplo-web img, #formulario img, #devuelve-la-salida img, #baterias-incluidas img {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+#novedades-en-el-tipado h2 {
+  font-size: 4em;
+  font-family: "Nanum Brush Script"; }
 
-#que-es {
-  font-size: 1.5em; }
+#novedades-en-el-tipado strong {
+  font-family: "Nanum Brush Script"; }
 
-#que-incluye {
-  font-size: 1.2em; }
-
-#que-incluye ul, #viewsets ul {
-  margin-left: 0;
-  columns: 2;
-  -webkit-columns: 2;
-  -moz-columns: 2; }
-
-#meta-framework {
-  font-size: 0.7em; }
-
-#framework-para-desarrollar-apis-rest strong, #django-rest-framework-complementa strong, #viewsets strong, #parsers-y-renderers strong,
-#otras-opciones-viewsets strong, #en-resumen strong, #caracteristicas strong {
-  color: #2b5b84; }
-
-#serializers strong {
-  color: #2b5b84;
-  font-size: 2em; }
-
-#los-serializers-serializan h3 {
-  text-transform: none;
-  font-style: italic;
-  font-size: 3.5em;
-  font-family: 'Allura', cursive; }
-
-#filtrado-y-paginacion h3 {
-  font-size: 2em; }
+#pep-655-typeddict-required-notrequired {
+  font-size: 0.8em; }
+  #pep-655-typeddict-required-notrequired strong {
+    display: block; }
 
 #continuamos h2, #continuamos h3, #mas-seguridad h2, #mas-seguridad h3, #python-te-necesita h2, #python-te-necesita h3 {
   font-weight: bold;
