--- a/_static/theme.scss
+++ b/_static/theme.scss
@@ -330,6 +330,12 @@ ul li {
   }
 }
 
+#pep-646-variadic-generics, #pep-681-data-class-transforms {
+  strong {
+    display: block;
+  }
+}
+
 #pep-655-typeddict-required-notrequired {
   font-size: 0.8em;
 
@@ -338,6 +344,7 @@ ul li {
   }
 
 }
+
 
 #como-puedo-conseguirlo {
   strong {
